HTML & CSS - Links til dokumentationssite tilføjet

--- a/index.html
+++ b/index.html
@@ -5,10 +5,42 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gruppe 11 - Dokumentations Site</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
-    <h1>HEJ MED JER VIRKER JEG, JO... DET GØR JEG VIST</h1>
+    <!-- TITLE START -->
+    <div id="overskrift">
+        <h1>Gruppe 11 - Dokumentations Site </h1>
+    </div>
+    <!-- TITLE SLUT -->
+    <!-- LINKS START -->
+    <div id="sectionwrapper_links">
+        <div class="daily_scrum">
+            <h2>Se vores daily scrum meetings:</h2>
+            <h3><a href="https://www.youtube.com/playlist?list=PL4zIEw1FWk8YYhV9RbAuBz5jlsfM1pXOr" target="123">Klik Her</a></h3>
+        </div>
+        <div class="burndownchart">
+            <h2>Se vores burn-down charts:</h2>
+            <h3><a href="https://www.youtube.com/playlist?list=PL4zIEw1FWk8YYhV9RbAuBz5jlsfM1pXOr" target="_blank">Klik Her</a></h3>
+        </div>
+        <div class="trello">
+            <h2>Se vores Trelloboard:</h2>
+            <h3><a href="https://trello.com/b/vVRKYMUF/gruppe-11-ux" target="_blank">Klik Her</a></h3>
+        </div>
+    </div>
+    <div id="sectionwrapper_medlem">
+        <div class="gruppenavne">
+            <h4>Ida</h4>
+            <h4>Toni</h4>
+            <h4>Mahnaz</h4>
+            <h4>Frederik Erichsen</h4>
+        </div>
+
+    </div>
+    <!-- LINKS SLUT -->
+
 </body>
+<footer class="footer">Copyright</footer>
 
 </html>
