--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             <h3><a href="https://trello.com/b/vVRKYMUF/gruppe-11-ux" target="_blank">Klik Her</a></h3>
         </div>
     </div>
+    <!-- LINKS SLUT -->
+    <!-- NAVNE START -->
     <div id="sectionwrapper_medlem">
         <div class="gruppenavne">
             <h4>Ida</h4>
@@ -38,8 +40,8 @@
         </div>
 
     </div>
-    <!-- LINKS SLUT -->
 
+    <!-- NAVNE SLUT -->
 </body>
 <footer class="footer">Copyright</footer>
 
