Opsætning af dokumentationssite

--- a/index.html
+++ b/index.html
@@ -9,11 +9,161 @@
 </head>
 
 <body>
+    <!-- DROPDOWN MENU START -->
+    <nav role="navigation">
+        <div id="menuToggle">
+
+            <input type="checkbox" />
+
+            <span></span>
+            <span></span>
+            <span></span>
+
+            <ul id="menu">
+                <a href="#experience_map">
+                    <li>Experience Map</li>
+                </a>
+                <a href="#persona">
+                    <li>Persona</li>
+                </a>
+                <a href="#keapp_test_1">
+                    <li>KeApp - Test 1</li>
+                </a>
+                <a href="#kea_skema_test_2">
+                    <li>Kea Skema - Test 2</li>
+                </a>
+                <a href="#kea_social_life_test_3">
+                    <li>Kea Social Life - Test 3</li>
+                </a>
+                <a href="#finalide">
+                    <li>Valg af Ide</li>
+                </a>
+                <a href="sectionwrapper_links">
+                    <li>Dailyscrum</li>
+                </a>
+                <a href="#sectionwrapper_links">
+                    <li>Burndownchart</li>
+                </a>
+                <a href="#sectionwrapper_links">
+                    <li>Trelloboard</li>
+                </a>
+                <a href="#sectionwrapper_links">
+                    <li>Præsentationssite</li>
+                </a>
+                <a href="#sectionwrapper_links">
+                    <li>Gruppekontrakt</li>
+                </a>
+            </ul>
+        </div>
+    </nav>
+    <!-- DROPDOWN MENU SLUT -->
+
     <!-- TITLE START -->
     <div id="overskrift">
         <h1>Gruppe 11 - Dokumentations Site </h1>
     </div>
     <!-- TITLE SLUT -->
+
+    <div id="experience_map">
+        <div class="sectionwrapper">
+            <h1>Experience Map</h1>
+            <div class="column">
+            </div>
+            <div class="column">
+                <img src="img/Ep-chart2.jpg">
+                <h2>Idebeskrivelse - Vejledningskø</h2>
+
+                <p><b>Problem:</b> vejledningskøen er for lang og for individuel - ofte når man ikke at få hjælp
+                    <br><b>Formål:</b> at mindske ventetiden og organisere hjælpen bedre. Man bruger appen, som en erstatning af vejledningskøen. Dvs. når man er gået i stå, og har et spørgsmål, kan man få hjælp og se hvornår og af hvem.</p>
+
+                <img src="img/Ep-chart1.jpg">
+                <h2>Idebeskrivelse - Skema
+                </h2>
+
+                <p><b>Udgangspunkt:</b> At skabe et bedre fællesskab på kea. Det kan være svært at se ugeplan, men det skal blive lettere med denne app. Man skal kunne få hurtigere noget information om, hvad ens skulle gøre.
+
+                    <br>Man henter app’en på sin telefon, hvis man går på kea. Denne app giver et overblik over hverdages plan, og man kan forberede sig til næste dag undervisning, samt hvis man har bruge for at hurtig kigge, hvad vi skal have i næste timer. I appen står en månedlig kalender, hvor man klikker på dagen, og ser hvad er dagens planet. Appen kan linke til gruppe list og aflevering information.
+                </p>
+                <img src="img/Ep-chart3.jpg">
+                <h2>Idebeskrivelse - Det sociale liv på kea
+                </h2>
+                <p><b>Udgangspunkt:</b> At skabe et bedre fællesskab på kea. Det kan være svært at få nye venner, men det skal blive lettere med denne app. Man skal kunne tilmelde sig sociale arrangementer, som elever, undervisere eller andre kan tilbyde.
+                    <br> Man henter app’en på sin telefon, hvis man går på kea. Denne app opdaterer en i forhold det sociale liv på kea. Dvs. man får notifikationer, når der sker noget, fx fredagsbarer. Yderligere kan man skrive opslag derinde. Fx spørge om nogle vil med i byen efter fredagsbar. De kan melde sig til, og så er de pludselig en gruppe, som ikke har snakket så meget sammen før, som kan lære hinanden bedre at kende. På denne måde kan keas elever få et tættere forhold udover skolen. Det behøver ikke kun omhandle fredagsbarer, men også andre aktiviteter ift. kea. Fx notifikationer om .1 semesters fernisering eller andet. </p>
+            </div>
+        </div>
+    </div>
+    <div id="persona">
+        <div class="sectionwrapper">
+            <h1>Persona</h1>
+            <div class="column"><img src="img/Persona.jpg">
+            </div>
+            <div class="column">
+                <p><b>Navn:</b> Amalie
+                    <br><b>Alder:</b> 21 år.
+                    <br><b>Status:</b> Single.
+                    <br><b>Bopæl:</b> Frederiksberg.
+                    <br><b>Job:</b> Har et studiejob 10 timer om ugen.
+                    <br><b>Uddannelse:</b> Studerer multimediedesign på Kea.
+                    <br><b>Fritid:</b> Amalie er en travl ung dame, som lever det unge liv. Samtidig med at hun knokler med studiet, arbejder hun i Illum som salgsassistent 2 gange om ugen. Hun sætter stor pris på at bruge sin overskydende tid på venner. Gerne på cafe eller i byens natteliv. Adfærd på sociale medier: Amalie er afhængig af sin telefon. Den er et forstyrrende element i undervisningen. Hun er konstant på de sociale medier. Messenger bipper hele tiden. Instagram er opdateret med glansbilleder af rejser og det fede liv, som i virkeligheden ikke er helt så fedt, som det ser ud til. Snapchat, facebook og tinder er også rødglødende på Amalies telefon.</p>
+            </div>
+        </div>
+    </div>
+    <div id="testsyoutube">
+        <div class="sectionwrapper">
+            <div class="testsvideoer">
+                <h1>Videodokumentation af test</h1>
+                <h2>for at se de 3 testresultater af paper-prototype:
+                </h2>
+                <h3><a href="https://www.youtube.com/playlist?list=PLAEZffhQsnCkDFLz2STC5Ib9T784y-E2t" target="_blank">Klik Her</a></h3>
+            </div>
+
+        </div>
+    </div>
+    <div id="keapp_test_1">
+        <div class="sectionwrapper">
+            <div class="tests_keapp">
+                <h1>Testresultat 1 - KeApp</h1>
+                <h2>For at se analysen:</h2>
+                <h3><a href="https://docs.google.com/document/d/1rAPz3O0ZGhYU7Zjn2O2ttA6JmBPr0RNpyVxpU6P6mOU/edit" target="_blank">Klik Her</a></h3>
+            </div>
+        </div>
+    </div>
+    <div id="kea_skema_test_2">
+        <div class="sectionwrapper">
+            <div class="tests_keaskema">
+                <h1>Testresultat 2 - Kea skema</h1>
+                <h2>For at se analysen:</h2>
+                <h3><a href="https://docs.google.com/document/d/1PHgKgljE78jGn_9dizJ_qhI0O0UsetMsgwh3Li-Y91Q/edit" target="_blank">Klik Her</a></h3>
+            </div>
+        </div>
+    </div>
+    <div id="kea_social_life_test_3">
+        <div class="sectionwrapper">
+            <div class="tests_keasociallife">
+                <h1>Testresultat 3 - Kea social life</h1>
+                <h2>For at se analysen:</h2>
+                <h3><a href="https://docs.google.com/document/d/1CcTm2ndyMZkS6cNGlnJAKgW9qTJLw5RF-lYnGAZjEXQ/edit" target="_blank">Klik Her</a></h3>
+            </div>
+        </div>
+    </div>
+    <div id="benchmark">
+        <div class="sectionwrapper">
+            <div class="tests_benchmark">
+                <h1>Valg af ide</h1>
+                <h2>For at se benchmark resultater:</h2>
+                <h3><a href="https://docs.google.com/document/d/1UT2WmzexWJ2wF93jkIOeQGb9fl2h6OYdNC4BKbWiIUI/edit" target="_blank">Klik Her</a></h3>
+            </div>
+        </div>
+    </div>
+
+    <div class="valgide">
+        <h1>Valg af ide</h1>
+        <h2><b>For at se paper prototype:</b>
+        </h2>
+        <p>(video hedder kea skema test2 - 5:01min)</p>
+        <h3><a href="https://docs.google.com/document/d/1UT2WmzexWJ2wF93jkIOeQGb9fl2h6OYdNC4BKbWiIUI/edit" target="_blank">Klik Her</a></h3>
+    </div>
+
     <!-- LINKS START -->
     <div id="sectionwrapper_links">
         <div class="daily_scrum">
@@ -22,12 +172,21 @@
         </div>
         <div class="burndownchart">
             <h2>Se vores burn-down charts:</h2>
-            <h3><a href="https://www.youtube.com/playlist?list=PL4zIEw1FWk8YYhV9RbAuBz5jlsfM1pXOr" target="_blank">Klik Her</a></h3>
+            <h3><a href="https://docs.google.com/document/d/1q0QLlZrljZrl2MqPPwOBhPeQYogrMil_p3Q9aCufByQ/edit" target="_blank">Klik Her</a></h3>
         </div>
         <div class="trello">
             <h2>Se vores Trelloboard:</h2>
             <h3><a href="https://trello.com/b/vVRKYMUF/gruppe-11-ux" target="_blank">Klik Her</a></h3>
         </div>
+        <div class="praesentations_site">
+            <h2>Præsentationssite:</h2>
+            <h3><a href="index_presentationssite.html" target="_blank">Klik Her</a></h3>
+        </div>
+        <div class="gruppekontrakt">
+            <h2>Gruppekontrakt:</h2>
+            <h3><a href="https://docs.google.com/document/d/13bdR9ULSEe632JrIWSjj5QAlRCLhoHngFfrUMZ-Tt4A/edit" target="_blank">Klik Her</a></h3>
+        </div>
+
     </div>
     <!-- LINKS SLUT -->
     <!-- NAVNE START -->
