--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@
             </div>
         </div>
     </div>
-
+<div id="Storyboard">
+    <h1>Storyboard</h1>
+    <img src="img/keaskema/kea_skema_storyboard%20-%20final.jpg"> </div>
     <div class="valgide">
         <h1>Valg af ide</h1>
         <h2><b>For at se paper prototype:</b>
@@ -192,9 +194,9 @@
     <!-- NAVNE START -->
     <div id="sectionwrapper_medlem">
         <div class="gruppenavne">
-            <h4>Ida</h4>
-            <h4>Toni</h4>
-            <h4>Mahnaz</h4>
+            <h4>Ida Lygum Pedersen</h4>
+            <h4>Toni Anh Quoc Nguyen</h4>
+            <h4>Mahnaz Hashemiaghdam</h4>
             <h4>Frederik Erichsen</h4>
         </div>
 
