Comment - Kode roder

--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!-- YO LÆS MIG!- KODEN ER LIDT NOGET ROD,
+    MEN DET SKULLE VIRKELIG GÅ STÆRKT! -->
+
+<!--  ┻━┻︵ \(°□°)/ ︵ ┻━┻ -->
+
 <!DOCTYPE html>
 <html lang="da">
 
@@ -155,9 +160,9 @@
             </div>
         </div>
     </div>
-<div id="Storyboard">
-    <h1>Storyboard</h1>
-    <img src="img/keaskema/kea_skema_storyboard%20-%20final.jpg"> </div>
+    <div id="Storyboard">
+        <h1>Storyboard</h1>
+        <img src="img/keaskema/kea_skema_storyboard%20-%20final.jpg"> </div>
     <div class="valgide">
         <h1>Valg af ide</h1>
         <h2><b>For at se paper prototype:</b>
