content præsentationssite + css

--- a/index.html
+++ b/index.html
@@ -1,204 +1,191 @@
-<!-- YO LÆS MIG!- KODEN ER LIDT NOGET ROD,
-    MEN DET SKULLE VIRKELIG GÅ STÆRKT! -->
-
-<!--  ┻━┻︵ \(°□°)/ ︵ ┻━┻ -->
-
 <!DOCTYPE html>
 <html lang="da">
 
 <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans|Quicksand|Roboto" rel="stylesheet">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gruppe 11 - Dokumentations Site</title>
+    <title>Gruppe 11 - præsentationssite</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
-    <!-- DROPDOWN MENU START -->
-    <nav role="navigation">
-        <div id="menuToggle">
-
-            <input type="checkbox" />
-
-            <span></span>
-            <span></span>
-            <span></span>
-
-            <ul id="menu">
-                <a href="#experience_map">
-                    <li>Experience Map</li>
-                </a>
-                <a href="#persona">
-                    <li>Persona</li>
-                </a>
-                <a href="#keapp_test_1">
-                    <li>KeApp - Test 1</li>
-                </a>
-                <a href="#kea_skema_test_2">
-                    <li>Kea Skema - Test 2</li>
-                </a>
-                <a href="#kea_social_life_test_3">
-                    <li>Kea Social Life - Test 3</li>
-                </a>
-                <a href="#finalide">
-                    <li>Valg af Ide</li>
-                </a>
-                <a href="sectionwrapper_links">
-                    <li>Dailyscrum</li>
-                </a>
-                <a href="#sectionwrapper_links">
-                    <li>Burndownchart</li>
-                </a>
-                <a href="#sectionwrapper_links">
-                    <li>Trelloboard</li>
-                </a>
-                <a href="#sectionwrapper_links">
-                    <li>Præsentationssite</li>
-                </a>
-                <a href="#sectionwrapper_links">
-                    <li>Gruppekontrakt</li>
-                </a>
-            </ul>
-        </div>
-    </nav>
-    <!-- DROPDOWN MENU SLUT -->
-
+    <div id="content">
     <!-- TITLE START -->
     <div id="overskrift">
-        <h1>Gruppe 11 - Dokumentations Site </h1>
+        <h1>PRÆSENTATIONSSITE</h1>
     </div>
-    <!-- TITLE SLUT -->
-
-    <div id="experience_map">
-        <div class="sectionwrapper">
-            <h1>Experience Map</h1>
-            <div class="column">
-            </div>
-            <div class="column">
-                <img src="img/Ep-chart2.jpg">
-                <h2>Idebeskrivelse - Vejledningskø</h2>
-
-                <p><b>Problem:</b> vejledningskøen er for lang og for individuel - ofte når man ikke at få hjælp
-                    <br><b>Formål:</b> at mindske ventetiden og organisere hjælpen bedre. Man bruger appen, som en erstatning af vejledningskøen. Dvs. når man er gået i stå, og har et spørgsmål, kan man få hjælp og se hvornår og af hvem.</p>
-
-                <img src="img/Ep-chart1.jpg">
-                <h2>Idebeskrivelse - Skema
-                </h2>
-
-                <p><b>Udgangspunkt:</b> At skabe et bedre fællesskab på kea. Det kan være svært at se ugeplan, men det skal blive lettere med denne app. Man skal kunne få hurtigere noget information om, hvad ens skulle gøre.
-
-                    <br>Man henter app’en på sin telefon, hvis man går på kea. Denne app giver et overblik over hverdages plan, og man kan forberede sig til næste dag undervisning, samt hvis man har bruge for at hurtig kigge, hvad vi skal have i næste timer. I appen står en månedlig kalender, hvor man klikker på dagen, og ser hvad er dagens planet. Appen kan linke til gruppe list og aflevering information.
-                </p>
-                <img src="img/Ep-chart3.jpg">
-                <h2>Idebeskrivelse - Det sociale liv på kea
-                </h2>
-                <p><b>Udgangspunkt:</b> At skabe et bedre fællesskab på kea. Det kan være svært at få nye venner, men det skal blive lettere med denne app. Man skal kunne tilmelde sig sociale arrangementer, som elever, undervisere eller andre kan tilbyde.
-                    <br> Man henter app’en på sin telefon, hvis man går på kea. Denne app opdaterer en i forhold det sociale liv på kea. Dvs. man får notifikationer, når der sker noget, fx fredagsbarer. Yderligere kan man skrive opslag derinde. Fx spørge om nogle vil med i byen efter fredagsbar. De kan melde sig til, og så er de pludselig en gruppe, som ikke har snakket så meget sammen før, som kan lære hinanden bedre at kende. På denne måde kan keas elever få et tættere forhold udover skolen. Det behøver ikke kun omhandle fredagsbarer, men også andre aktiviteter ift. kea. Fx notifikationer om .1 semesters fernisering eller andet. </p>
-            </div>
-        </div>
-    </div>
-    <div id="persona">
-        <div class="sectionwrapper">
-            <h1>Persona</h1>
-            <div class="column"><img src="img/Persona.jpg">
-            </div>
-            <div class="column">
-                <p><b>Navn:</b> Amalie
-                    <br><b>Alder:</b> 21 år.
-                    <br><b>Status:</b> Single.
-                    <br><b>Bopæl:</b> Frederiksberg.
-                    <br><b>Job:</b> Har et studiejob 10 timer om ugen.
-                    <br><b>Uddannelse:</b> Studerer multimediedesign på Kea.
-                    <br><b>Fritid:</b> Amalie er en travl ung dame, som lever det unge liv. Samtidig med at hun knokler med studiet, arbejder hun i Illum som salgsassistent 2 gange om ugen. Hun sætter stor pris på at bruge sin overskydende tid på venner. Gerne på cafe eller i byens natteliv. Adfærd på sociale medier: Amalie er afhængig af sin telefon. Den er et forstyrrende element i undervisningen. Hun er konstant på de sociale medier. Messenger bipper hele tiden. Instagram er opdateret med glansbilleder af rejser og det fede liv, som i virkeligheden ikke er helt så fedt, som det ser ud til. Snapchat, facebook og tinder er også rødglødende på Amalies telefon.</p>
-            </div>
-        </div>
-    </div>
-    <div id="testsyoutube">
-        <h1>Videodokumentation af test</h1>
-        <h2>for at se de 3 testresultater af paper-prototype:
-        </h2>
-        <h3><a href="https://www.youtube.com/playlist?list=PLAEZffhQsnCkDFLz2STC5Ib9T784y-E2t" target="_blank">Klik Her</a></h3>
-    </div>
-
-    <div id="keapp_test_1">
-
-        <h1>Testresultat 1 - KeApp</h1>
-        <h2>For at se analysen:</h2>
-        <h3><a href="https://docs.google.com/document/d/1rAPz3O0ZGhYU7Zjn2O2ttA6JmBPr0RNpyVxpU6P6mOU/edit" target="_blank">Klik Her</a></h3>
-
-    </div>
-
-
-    <div id="kea_skema_test_2">
-        <h1>Testresultat 2 - Kea skema</h1>
-        <h2>For at se analysen:</h2>
-        <h3><a href="https://docs.google.com/document/d/1PHgKgljE78jGn_9dizJ_qhI0O0UsetMsgwh3Li-Y91Q/edit" target="_blank">Klik Her</a></h3>
-
-    </div>
-
-    <div id="kea_social_life_test_3">
-
-        <h1>Testresultat 3 - Kea social life</h1>
-        <h2>For at se analysen:</h2>
-        <h3><a href="https://docs.google.com/document/d/1CcTm2ndyMZkS6cNGlnJAKgW9qTJLw5RF-lYnGAZjEXQ/edit" target="_blank">Klik Her</a></h3>
-
-    </div>
-
-    <div id="benchmark">
-        <h1>Valg af ide</h1>
-        <h2>For at se benchmark resultater:</h2>
-        <h3><a href="https://docs.google.com/document/d/1UT2WmzexWJ2wF93jkIOeQGb9fl2h6OYdNC4BKbWiIUI/edit" target="_blank">Klik Her</a></h3>
-
-
-    </div>
-    <div id="Storyboard">
-        <h1>Storyboard</h1>
-        <img src="img/keaskema/kea_skema_storyboard%20-%20final.jpg"> </div>
-    <div class="valgide">
-        <h1>Valg af ide</h1>
-        <h2><b>For at se paper prototype:</b>
-        </h2>
-        <p>(video hedder kea skema test2 - 5:01min)</p>
-        <h3><a href="https://docs.google.com/document/d/1UT2WmzexWJ2wF93jkIOeQGb9fl2h6OYdNC4BKbWiIUI/edit" target="_blank">Klik Her</a></h3>
-    </div>
-
-    <!-- LINKS START -->
-    <div id="sectionwrapper_links">
-        <div class="daily_scrum">
-            <h2>Se vores daily scrum meetings:</h2>
-            <h3><a href="https://www.youtube.com/playlist?list=PL4zIEw1FWk8YYhV9RbAuBz5jlsfM1pXOr" target="123">Klik Her</a></h3>
-        </div>
-        <div class="burndownchart">
-            <h2>Se vores burn-down charts:</h2>
-            <h3><a href="https://docs.google.com/document/d/1q0QLlZrljZrl2MqPPwOBhPeQYogrMil_p3Q9aCufByQ/edit" target="_blank">Klik Her</a></h3>
-        </div>
-        <div class="trello">
-            <h2>Se vores Trelloboard:</h2>
-            <h3><a href="https://trello.com/b/vVRKYMUF/gruppe-11-ux" target="_blank">Klik Her</a></h3>
-        </div>
-        <div class="praesentations_site">
-            <h2>Præsentationssite:</h2>
-            <h3><a href="index_presentationssite.html" target="_blank">Klik Her</a></h3>
-        </div>
-        <div class="gruppekontrakt">
-            <h2>Gruppekontrakt:</h2>
-            <h3><a href="https://docs.google.com/document/d/13bdR9ULSEe632JrIWSjj5QAlRCLhoHngFfrUMZ-Tt4A/edit" target="_blank">Klik Her</a></h3>
-        </div>
-
-    </div>
-    <!-- LINKS SLUT -->
     <!-- NAVNE START -->
     <div id="sectionwrapper_medlem">
         <div class="gruppenavne">
-            <h4>Ida Lygum Pedersen</h4>
-            <h4>Toni Anh Quoc Nguyen</h4>
-            <h4>Mahnaz Hashemiaghdam</h4>
+            <h4>Ida</h4>
+            <h4>Toni</h4>
+            <h4>Mahnaz</h4>
             <h4>Frederik Erichsen</h4>
         </div>
 
     </div>
 
     <!-- NAVNE SLUT -->
+
+    <!-- LINK TIL APP START RD --->
+
+        <div id="app_link">
+            <h1>APP</h1>
+            <a href="indsæt link" target="_blank">
+         <img src="indsætbillede" alt="App"></a>
+        </div>
+
+     <!-- LINK TIL APP START RD --->
+
+     <!-- LINK TIL PITCH START RD --->
+
+        <div id="pitch_link">
+            <h1>Pitch</h1>
+            <a href="indsæt link" target="_blank" alt="Pitch">LINK</a>
+        </div>
+    <!-- LINK TIL PITCH SLUT RD --->
+
+
+    <!-- IDEBESKRIVELSE START RD --->
+
+        <div id="fordele_benefits">
+            <h1>Idebeskrivelse</h1>
+            <h2>KEA skema App</h2>
+
+            <h3>Problemstilling</h3>
+
+            <p>
+                Det at tjekke sit daglige skema på Kea og selve vejen dertil på ens computer er alt for besværlig. Skemaet ligger som et 20 siders langt excel-ark på fronter og gælder for hele semesteret. En alternativ adgang til skemaet er via. Mobil, men da fronter-appen ikke virker og excel-formatet ikke er mobilvenligt, gør det processen meget bøvlet.
+            </p>
+            <br>
+            <p>
+                Så når alt kommer til alt, er det en meget problematisk proces og det kan hurtigt virke meget uoverskueligt og frustrerende.
+            </p>
+            <br>
+            <p>
+                – Da skemaet styrer ens dagligdag, opgaver, grupper og færden på Kea, er et let tilgængeligt skema lige så vigtigt for en studerende, som en projektkoordinator er for sin produktion.
+            </p>
+
+
+            <p>
+                Se et direkte link for skemaet:
+            </p>
+            <a href="https://docs.google.com/spreadsheets/d/1yRLhHaeo7cYy9hFFDdnGbuEOUPnwBRlJyWPoW4z9gqg/edit#gid=0" target="_blank" alt="Skema">LINK
+        </a>
+            <p>
+                Se et direkte link for gruppearket:
+            </p>
+            <a href="https://docs.google.com/spreadsheets/d/1sNXCA2sKdK2JCkh4R4zwIffLwFl4YNBRWeV49sBen9U/edit?usp=sharing" target="_blank" alt="Gruppeark">LINK
+        </a>
+
+            <h3>Formål</h3>
+
+            <p>
+                Det er besværligt som studerende på Kea, at tjekke sin ugeplan. Det skal nu blive lettere med denne app. App’en skal gøre det muligt at tjekke informationer derhjemme eller når man er på farten. Med få klik skal den studerende let kunne danne sig et overblik over sin ugeplan, lektier, afleveringer og grupperoversigt.
+            </p>
+            <br>
+            <p>
+                Brugeren downloader app’en <b>Kea Skema</b> på sin mobil. Første gang logger man på med sin studiemail, derefter er der autologin. App’en giver et overblik over dagens skema, med mulighed for at swipe mellem dagene og f.eks. forberede sig til næste dag.
+            </p>
+            <br>
+            <p>
+                Hvis man har glemt at tjekke lektier, afleveringer eller hvilken gruppe man er kommet i, kan man ubesværet danne sig et overblik ved at trykke på de tilgængelige knapper der leder brugeren hen til den ønskede funktion.
+            </p>
+            <br>
+            <p>
+                Hvis den studerende vil danne sig et overblik pga. af arbejde, ferie eller lign. findes der også en kalenderoversigt for hele semesteret.
+            </p>
+            <h3> Tilgængelige funktioner</h3>
+            <ul>
+                <li>Dagens skema</li>
+                <li>Ugeplan</li>
+                <li>Semester</li>
+                <li>Lektier med opgavebeskrivelse</li>
+                <li>Afleveringer</li>
+                <li>grupperoversigt/opsætning af grupper</li>
+            </ul>
+
+            <h3>Målgruppe</h3>
+            <p>
+                studerende på den dansk/engelske linje: Multimediedesign. – Samt Keas studerende.
+            </p>
+
+            <h3>Skalerbarheden</h3>
+
+            <p>
+                Studerende på Multimediedesign → Studerende på lygten 16. → Studerende på alle Københavns erhvervs akademier → Alternativ til fronter/lectio og andre skemaerløsninger. → konkurrent til diverse koordinering programmer. Såsom Trello/Farmers wife og mobil kalender (kræver integration af mail og personlige ønsker til modificering af funktioner fra de enkelte kunder) Excel-skemaet.
+            </p>
+            <h3>Samlet Benchmark score:</h3>
+            <ul>
+                <li>
+                    KeApp - Score: 14,4
+                </li>
+                <li>
+                    Kea Skema: 16,5
+                </li>
+                <li>
+                    Kea Social Life: 9.5
+                </li>
+            </ul>
+
+            <h3> Konklusion af Bechmark analyse:</h3>
+            <p>
+                Kea Skema App er udviklet til en lille målgruppe. Dog er værdien og skalerbarheden for målgruppen stor, da alle studerende, ansatte og organisationer gør brug af skemaer eller koordinering i dagligdagen. Selvom der er mange mulige alternativer er idéen realistisk fordi App’en tilpasses til dette studie. Endvidere har alternativet en lav brugervenlighed og er tilmed utilgængeligt på nogle platforme. Det betyder i sidste ende manglen og efterspørgsel på en funktionel Skema-app har høj værdi blandt de studerende. På baggrund af resultaterne fra Benchmark analysen har ”Kea skema app” også den højeste score og dermed har ideen også størst værdi og det bedste potentiale for at klare sig på Market.</p>
+
+            <h3>
+                Benefits:
+            </h3>
+            <p>
+                Med Kea Skema app kan målgruppen sikre sig et skema, der både er tidsbesparende og overskueligt at bruge. Det vil være muligt at tjekke sit skema på flere platforme, hvilket gør app’en flexibel, let tilgængelig og brugervenlig på mobilen, tablet og computer, både online og offline.</p>
+            <br>
+            <p>
+                Dertil vil App’en være med til at skabe overblik over ens kommende aktiviteter på skolen, da funktionerne er skræddersyet til de studerendes behov på Kea.</p>
+            <ul>
+                <li>Overblik</li>
+                <li>Overskueligt</li>
+                <li>Flexibelt</li>
+                <li>Tidsbesparelse</li>
+            </ul>
+
+
+
+            <div class="hs-responsive-embed-computer">
+                <h3>Hvordan logger jeg på fronter?</h3>
+                <video width="400" controls>
+                    <source src="videofil"
+                        type="video/mp4">
+                        <source src="videofil" type="video/ogg">
+                        Your browser does not support the video tag.
+            </video>
+            </div>
+
+            <div class="hs-responsive-embed-computer">
+                <h3>Hvordan logger jeg på med App’en – Let ikke?</h3>
+                <video width="400" controls>
+                    <source src="videofil"
+                        type="video/mp4">
+                        <source src="videofil" type="video/ogg">
+                        Your browser does not support the video tag.
+            </video>
+            </div>
+
+        <!-- IDEBESKRIVELSE SLUT RD --->
+
+        <!-- LINK TIL DOKUMENTATIONSSITE START RD --->
+
+            <div id="dokumentationssite">
+                <h1>Dokumentationssite</h1>
+                <a href="index_dokumentationssite.html" target="_blank" alt="Dokumentationssite">LINK</a>
+            </div>
+        <!-- LINK TIL DOKUMENTATIONSSITE SLUT RD --->
+
+
+        </div>
+
+    </div>
+
 </body>
 <footer class="footer">Copyright</footer>
 
