background colour and image

--- a/index.html
+++ b/index.html
@@ -12,24 +12,27 @@
 
 <body>
     <div id="content">
-    <!-- TITLE START -->
-    <div id="overskrift">
-        <h1>PRÆSENTATIONSSITE</h1>
-    </div>
-    <!-- NAVNE START -->
-    <div id="sectionwrapper_medlem">
-        <div class="gruppenavne">
-            <h4>Ida</h4>
-            <h4>Toni</h4>
-            <h4>Mahnaz</h4>
-            <h4>Frederik Erichsen</h4>
+        <!-- TITLE START -->
+        <div id="overskrift">
+            <h1>PRÆSENTATIONSSITE</h1>
+        </div>
+        <!-- NAVNE START -->
+        <div id="sectionwrapper_medlem">
+            <div class="gruppenavne">
+                <h4>Ida Lygum Pedersen</h4>
+                <h4>Toni Anh Quoc Nguyen</h4>
+                <h4>Mahnaz Hashemiaghdam</h4>
+                <h4>Frederik Erichsen</h4>
+                <h4>Rikke Dyreby</h4>
+                <h4>Simone Juul Andersen</h4>
+
+            </div>
+
         </div>
 
-    </div>
+        <!-- NAVNE SLUT -->
 
-    <!-- NAVNE SLUT -->
-
-    <!-- LINK TIL APP START RD --->
+        <!-- LINK TIL APP START RD --->
 
         <div id="app_link">
             <h1>APP</h1>
@@ -37,20 +40,22 @@
          <img src="indsætbillede" alt="App"></a>
         </div>
 
-     <!-- LINK TIL APP START RD --->
+        <!-- LINK TIL APP START RD --->
 
-     <!-- LINK TIL PITCH START RD --->
+        <!-- LINK TIL PITCH START RD --->
 
         <div id="pitch_link">
             <h1>Pitch</h1>
             <a href="indsæt link" target="_blank" alt="Pitch">LINK</a>
         </div>
-    <!-- LINK TIL PITCH SLUT RD --->
+        <!-- LINK TIL PITCH SLUT RD --->
 
 
-    <!-- IDEBESKRIVELSE START RD --->
+        <!-- IDEBESKRIVELSE START RD --->
 
         <div id="fordele_benefits">
+            <!--            <div class="baggrund"><img src="img/baggrund.jpg"></div>-->
+
             <h1>Idebeskrivelse</h1>
             <h2>KEA skema App</h2>
 
@@ -171,15 +176,15 @@
             </video>
             </div>
 
-        <!-- IDEBESKRIVELSE SLUT RD --->
+            <!-- IDEBESKRIVELSE SLUT RD --->
 
-        <!-- LINK TIL DOKUMENTATIONSSITE START RD --->
+            <!-- LINK TIL DOKUMENTATIONSSITE START RD --->
 
             <div id="dokumentationssite">
                 <h1>Dokumentationssite</h1>
                 <a href="index_dokumentationssite.html" target="_blank" alt="Dokumentationssite">LINK</a>
             </div>
-        <!-- LINK TIL DOKUMENTATIONSSITE SLUT RD --->
+            <!-- LINK TIL DOKUMENTATIONSSITE SLUT RD --->
 
 
         </div>
