--- a/index.html
+++ b/index.html
@@ -13,31 +13,18 @@
 <body>
     <div id="content">
         <!-- TITLE START -->
-        <div id="overskrift">
+    <div id="overskrift">
             <h1>PRÆSENTATIONSSITE</h1>
         </div>
-        <!-- NAVNE START -->
-        <div id="sectionwrapper_medlem">
-            <div class="gruppenavne">
-                <h4>Ida Lygum Pedersen</h4>
-                <h4>Toni Anh Quoc Nguyen</h4>
-                <h4>Mahnaz Hashemiaghdam</h4>
-                <h4>Frederik Erichsen</h4>
-                <h4>Rikke Dyreby</h4>
-                <h4>Simone Juul Andersen</h4>
 
-            </div>
 
-        </div>
-
-        <!-- NAVNE SLUT -->
 
         <!-- LINK TIL APP START RD --->
 
         <div id="app_link">
             <h1>APP</h1>
-            <a href="indsæt link" target="_blank">
-         <img src="indsætbillede" alt="App"></a>
+            <a href="https://xd.adobe.com/view/1abe7fe6-6760-4fab-b930-8465a406209c" target="_blank">
+         <img src="img/ikon.png" alt="App"></a>
         </div>
 
         <!-- LINK TIL APP START RD --->
@@ -73,108 +60,21 @@
                 – Da skemaet styrer ens dagligdag, opgaver, grupper og færden på Kea, er et let tilgængeligt skema lige så vigtigt for en studerende, som en projektkoordinator er for sin produktion.
             </p>
 
-
-            <p>
-                Se et direkte link for skemaet:
-            </p>
-            <a href="https://docs.google.com/spreadsheets/d/1yRLhHaeo7cYy9hFFDdnGbuEOUPnwBRlJyWPoW4z9gqg/edit#gid=0" target="_blank" alt="Skema">LINK
-        </a>
-            <p>
-                Se et direkte link for gruppearket:
-            </p>
-            <a href="https://docs.google.com/spreadsheets/d/1sNXCA2sKdK2JCkh4R4zwIffLwFl4YNBRWeV49sBen9U/edit?usp=sharing" target="_blank" alt="Gruppeark">LINK
-        </a>
-
             <h3>Formål</h3>
 
             <p>
                 Det er besværligt som studerende på Kea, at tjekke sin ugeplan. Det skal nu blive lettere med denne app. App’en skal gøre det muligt at tjekke informationer derhjemme eller når man er på farten. Med få klik skal den studerende let kunne danne sig et overblik over sin ugeplan, lektier, afleveringer og grupperoversigt.
             </p>
             <br>
-            <p>
-                Brugeren downloader app’en <b>Kea Skema</b> på sin mobil. Første gang logger man på med sin studiemail, derefter er der autologin. App’en giver et overblik over dagens skema, med mulighed for at swipe mellem dagene og f.eks. forberede sig til næste dag.
-            </p>
-            <br>
-            <p>
-                Hvis man har glemt at tjekke lektier, afleveringer eller hvilken gruppe man er kommet i, kan man ubesværet danne sig et overblik ved at trykke på de tilgængelige knapper der leder brugeren hen til den ønskede funktion.
-            </p>
-            <br>
-            <p>
-                Hvis den studerende vil danne sig et overblik pga. af arbejde, ferie eller lign. findes der også en kalenderoversigt for hele semesteret.
-            </p>
-            <h3> Tilgængelige funktioner</h3>
-            <ul>
-                <li>Dagens skema</li>
-                <li>Ugeplan</li>
-                <li>Semester</li>
-                <li>Lektier med opgavebeskrivelse</li>
-                <li>Afleveringer</li>
-                <li>grupperoversigt/opsætning af grupper</li>
-            </ul>
 
-            <h3>Målgruppe</h3>
-            <p>
-                studerende på den dansk/engelske linje: Multimediedesign. – Samt Keas studerende.
-            </p>
-
-            <h3>Skalerbarheden</h3>
-
-            <p>
-                Studerende på Multimediedesign → Studerende på lygten 16. → Studerende på alle Københavns erhvervs akademier → Alternativ til fronter/lectio og andre skemaerløsninger. → konkurrent til diverse koordinering programmer. Såsom Trello/Farmers wife og mobil kalender (kræver integration af mail og personlige ønsker til modificering af funktioner fra de enkelte kunder) Excel-skemaet.
-            </p>
-            <h3>Samlet Benchmark score:</h3>
-            <ul>
-                <li>
-                    KeApp - Score: 14,4
-                </li>
-                <li>
-                    Kea Skema: 16,5
-                </li>
-                <li>
-                    Kea Social Life: 9.5
-                </li>
-            </ul>
-
-            <h3> Konklusion af Bechmark analyse:</h3>
-            <p>
-                Kea Skema App er udviklet til en lille målgruppe. Dog er værdien og skalerbarheden for målgruppen stor, da alle studerende, ansatte og organisationer gør brug af skemaer eller koordinering i dagligdagen. Selvom der er mange mulige alternativer er idéen realistisk fordi App’en tilpasses til dette studie. Endvidere har alternativet en lav brugervenlighed og er tilmed utilgængeligt på nogle platforme. Det betyder i sidste ende manglen og efterspørgsel på en funktionel Skema-app har høj værdi blandt de studerende. På baggrund af resultaterne fra Benchmark analysen har ”Kea skema app” også den højeste score og dermed har ideen også størst værdi og det bedste potentiale for at klare sig på Market.</p>
-
-            <h3>
-                Benefits:
+               <h3> Benefits:
             </h3>
             <p>
                 Med Kea Skema app kan målgruppen sikre sig et skema, der både er tidsbesparende og overskueligt at bruge. Det vil være muligt at tjekke sit skema på flere platforme, hvilket gør app’en flexibel, let tilgængelig og brugervenlig på mobilen, tablet og computer, både online og offline.</p>
             <br>
             <p>
                 Dertil vil App’en være med til at skabe overblik over ens kommende aktiviteter på skolen, da funktionerne er skræddersyet til de studerendes behov på Kea.</p>
-            <ul>
-                <li>Overblik</li>
-                <li>Overskueligt</li>
-                <li>Flexibelt</li>
-                <li>Tidsbesparelse</li>
-            </ul>
 
-
-
-            <div class="hs-responsive-embed-computer">
-                <h3>Hvordan logger jeg på fronter?</h3>
-                <video width="400" controls>
-                    <source src="videofil"
-                        type="video/mp4">
-                        <source src="videofil" type="video/ogg">
-                        Your browser does not support the video tag.
-            </video>
-            </div>
-
-            <div class="hs-responsive-embed-computer">
-                <h3>Hvordan logger jeg på med App’en – Let ikke?</h3>
-                <video width="400" controls>
-                    <source src="videofil"
-                        type="video/mp4">
-                        <source src="videofil" type="video/ogg">
-                        Your browser does not support the video tag.
-            </video>
-            </div>
 
             <!-- IDEBESKRIVELSE SLUT RD --->
 
@@ -186,6 +86,21 @@
             </div>
             <!-- LINK TIL DOKUMENTATIONSSITE SLUT RD --->
 
+
+        </div>
+
+
+        <!-- NAVNE START -->
+        <div id="sectionwrapper_medlem">
+            <div class="gruppenavne">
+                <h4>Ida Lygum Pedersen</h4>
+                <h4>Toni Anh Quoc Nguyen</h4>
+                <h4>Mahnaz Hashemiaghdam</h4>
+                <h4>Frederik Erichsen</h4>
+                <h4>Rikke Dyreby</h4>
+                <h4>Simone Juul Andersen</h4>
+
+            </div>
 
         </div>
 
